# FPFH_ICP

./: CMakeLists.txt  README.md  results
data/: output_from_depth2.ply  traget.ply
data/0.5/: source.ply  target.ply
include/: PointCloudAlignment.hpp
result/: 05_aligned.ply  aligned.ply  aligned2.ply
src/: FPFH.cpp  PointCloudAlignment.cpp  icp.cpp  main.cpp  visualizer.cpp
